ecmascript/parser/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersWithArrayTypeAnnotations/input.ts.stderr
error[1014]: A rest parameter must be last in a parameter list
 --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersWithArrayTypeAnnotations/input.ts:5:11
  |
5 | var f2 = (...x: number[], ...y: number[]) => { }
  |           ^^^

error[1014]: A rest parameter must be last in a parameter list
  --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersWithArrayTypeAnnotations/input.ts:13:9
   |
13 |     foo(...x: number[], ...y: number[]);
   |         ^^^

error[1014]: A rest parameter must be last in a parameter list
  --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersWithArrayTypeAnnotations/input.ts:23:21
   |
23 |     a: function foo(...x: number[], ...y: number[]) { },
   |                     ^^^

error[1014]: A rest parameter must be last in a parameter list
  --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersWithArrayTypeAnnotations/input.ts:32:11
   |
32 | var f4 = (...x: Array<string>, ...y: Array<string>) => { }
   |           ^^^

error[1014]: A rest parameter must be last in a parameter list
  --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersWithArrayTypeAnnotations/input.ts:40:9
   |
40 |     foo(...x: Array<string>, ...y: Array<string>);
   |         ^^^

error[1014]: A rest parameter must be last in a parameter list
  --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersWithArrayTypeAnnotations/input.ts:50:21
   |
50 |     a: function foo(...x: Array<string>, ...y: Array<string>) { },
   |                     ^^^

